todo_project/base/deployment-broadcaster.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-broadcaster
  namespace: project
spec:
  replicas: 6
  selector:
    matchLabels:
      app: todo-broadcaster
  template:
    metadata:
      labels:
        app: todo-broadcaster
    spec:
      containers:
        - name: broadcaster
          image: PROJECT/BROADCASTER
          resources:
            requests:
              cpu: "50m"
              memory: "64Mi"
            limits:
              cpu: "100m"
              memory: "128Mi"
